are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

191069  Exiting due to signal not reported in XML output
212352  vex amd64 unhandled opc_aux = 0x 2, first_opcode == 0xDC (FCOM)
278744  cvtps2pd with redundant RexW
353083  arm64 doesn't implement various xattr system calls
353084  arm64 doesn't support sigpending system call
353370  don't advertise RDRAND in cpuid for Core-i7-4910-like avx2 machine
353398  WARNING: unhandled amd64-solaris syscall: 207
353660  XML in auxwhat tag not escaping reserved symbols properly
353680  s390x: Crash with certain glibc versions due to non-implemented TBEGIN
353891  Assert 'bad_scanned_addr < VG_ROUNDDN(start+len, sizeof(Addr))' failed
353917  unhandled amd64-solaris syscall fchdir(120)
353920  unhandled amd64-solaris syscall: 170
354392  unhandled amd64-solaris syscall: 171
354797  Added vbit tester support for PPC 64 isa 2.07 iops
354933  Fix documentation of --kernel-variant=android-no-hw-tls option
355188  valgrind should intercept all malloc related global functions
355455  stderr.exp of test cases wrapmalloc and wrapmallocstatic overconstrained
355454  do not intercept malloc related symbols from the runtime linker
356044  Dwarf line info reader misinterprets is_stmt register
356817  valgrind.h triggers compiler errors on MSVC when defining NVALGRIND
357833  Setting RLIMIT_DATA to zero breaks with linux 4.5+
357871  pthread_spin_destroy not properly wrapped
357887  Fix a file handle leak. VG_(fclose) did not close the file
358030  support direct socket calls on x86 32bit (new in linux 4.3)

n-i-bz Fix incorrect (or infinite loop) unwind on RHEL7 x86 32 bits
n-i-bz massif --pages-as-heap=yes does not report peak caused by mmap+munmap
n-i-bz false positive leaks due to aspacemgr merging non heap segments with heap segments.

Release 3.11.0 (22 September 2015)